# distrosOld

./: .gitignore  README.md
code/: README.md
code/bash/: README.md
code/config/: README.md
code/cpp/: README.md
code/cpp/apps/: README.md
code/cpp/apps/configurer/: .gitignore  CMakeLists.txt  README.md  main.cpp
code/cpp/libs/: README.md
code/cpp/libs/json/: README.md
code/cpp/tests/: CMakeLists.txt  README.md
code/cpp/tests/apps/: README.md
code/cpp/tests/apps/configurerTests/: README.md
code/cpp/tests/libs/: README.md
code/cpp/tests/libs/jsonTests/: README.md
code/documents/: README.md
code/python/: README.md
code/scripts/: README.md
code/scripts/bash/: README.md
code/scripts/python/: README.md
code/scripts/tests/: README.md
code/scripts/tests/bash/: README.md
code/scripts/tests/python/: README.md
docs/: README.md
docs/development/: README.md
installation/: README.md
